:sparkles: Implemented app email function
