# APIServer/Areas/Metric/Data/MetricContext.cs
@@ -8,7 +8,7 @@ using System.Threading.Tasks;
 
 namespace APIServer.Areas.Metric.Data
 {
-    public class MetricContext : DbContext
+    public class MetricContext : BaseContext
     {
         public DbSet<Email> PatricioPersonalEmails { get; set; }
         public DbSet<User> PatricioPersonalUsers { get; set; }
@@ -17,18 +17,5 @@ namespace APIServer.Areas.Metric.Data
         {
 
         }
-
-        //protected override void OnModelCreating(ModelBuilder modelBuilder)
-        //{
-        //    modelBuilder.Entity<Email>()
-        //        .Property(c => c.Purpose)
-        //        .HasConversion<int>();
-
-        //    modelBuilder.Entity<Email>()
-        //        .Property(c => c.Sender)
-        //        .HasConversion<int>();
-
-        //    base.OnModelCreating(modelBuilder);
-        //}
     }
 }
