# APIServer/Areas/Metric/Models/User.cs
@@ -7,8 +7,9 @@ using System.Threading.Tasks;
 
 namespace APIServer.Areas.Metric.Models
 {
-    public class User
+    public class User : BaseEntity
     {
         public int Id { get; set; }
+        public string IpAddress { get; set; }
     }
 }
